--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
 </head>
 
 <body>
+    <h1>Regina Zambrano</h1>
+    <h5>Web Design - Spring 2019</h5>
+    
+    <h3>Project 1</h3>
+    <ul>
+    <li><a href="">Plain HTML</a></li>
+        <li><a href="">Final Coded Site</a></li>
+    
+    </ul>
 </body>
 
 </html>
