--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <h3>Project 1</h3>
     <ul>
     <li><a href="">Plain HTML</a></li>
-        <li><a href="/project1/index.html">Final Coded Site</a></li>
+        <li><a href="/project1/">Final Coded Site</a></li>
     
     </ul>
     </div>    
