--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         }
         
         .header {
-            width: auto;
+            width: 100%;
             height: 200px;
             background-color: white;
             margin: auto;
