--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         }
         
         a {
-            text-decoration: none;
+            text-decoration: underline;
             color: white;
         }
     
