--- a/project1/index.html
+++ b/project1/index.html
@@ -19,7 +19,7 @@
             <div class="left">  
             <div class="text">
                 <h2> Prata </h2>
-                <p>Prata is a didone typeface designed by Saint Petersburg based designer, Ivan Petrov, for Cyreal in 2011. Unique characteristics of this typeface include sharp features, organic teardrops and thin strokes (<a href="https://fonts.google.com/specimen/Prata">"Prata"</a>). Didone font styles originated in France, the name didone comes from the two typefaces, Didot and Bodoni. These font styles are never out of style and are synonymous with elegance and sophistication (<a href="https://www.sessions.edu/notes-on-design/type-in-history-the-didones/">Penney</a>).</p>
+                <p>Prata is a didone typeface designed by Saint Petersburg based designer, Ivan Petrov, for Cyreal in 2011. Unique characteristics of this typeface include sharp features, organic teardrops and thin strokes (<a href="https://fonts.google.com/specimen/Prata" target="_blank">"Prata"</a>). Didone font styles originated in France, the name didone comes from the two typefaces, Didot and Bodoni. These font styles are never out of style and are synonymous with elegance and sophistication (<a href="https://www.sessions.edu/notes-on-design/type-in-history-the-didones/" target="_blank">Penney</a>).</p>
             </div>
             <div class="name-picture flexy-box">
             <img src="assets/my_picture.jpg">
@@ -33,8 +33,8 @@
             </div>
             <div class="sources">
                 <h3>Sources</h3>
-                <p> “Prata.” Google Fonts, Google, <a href="fonts.google.com/specimen/Prata"> fonts.google.com/specimen/Prata</a>.</p>
-                <p> Penney, Margaret. “Type in History: The Didones.” Sessions College, 28 Nov. 2016, <a href="www.sessions.edu/notes-on-design/type-in-history-the-didones">www.sessions.edu/notes-on-design/type-in-history-the-didones</a>.</p>
+                <p> “Prata.” Google Fonts, Google, <a href="https://fonts.google.com/specimen/Prata" target="_blank"> fonts.google.com/specimen/Prata</a>.</p>
+                <p> Penney, Margaret. “Type in History: The Didones.” Sessions College, 28 Nov. 2016, <a href="https://www.sessions.edu/notes-on-design/type-in-history-the-didones" target="_blank">www.sessions.edu/notes-on-design/type-in-history-the-didones</a>.</p>
             </div>
             </div>
             <div class="right">
