--- a/index.html
+++ b/index.html
@@ -73,8 +73,9 @@
     <div class="project">
     <h3>Project 1</h3>
     <ul>
-    <li><a href="">Plain HTML</a></li>
-        <li><a href="/project1/">Final Coded Site</a></li>
+        <li><a href="/assets/project1/style-tiles-project1.pdf">Style Tiles</a></li>
+        <li><a href="">Plain HTML</a></li>
+        <li><a href="/project1/">Final Coded Site</a></li>  
     
     </ul>
     </div>    
