remove style tiles

--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
     <div class="project">
     <h3>Project 1</h3>
     <ul>
-        <li><a href="/assets/project1/style-tiles-project1.pdf">Style Tiles</a></li>
-        <li><a href="">Plain HTML</a></li>
-        <li><a href="/project1/">Final Coded Site</a></li>  
+<!--        <li><a href="/assets/project1/style-tiles-project1.pdf" target="_blank">Style Tiles</a></li>-->
+        <li><a href="" target="_blank">Plain HTML</a></li>
+        <li><a href="/project1/" target="_blank">Final Coded Site</a></li>  
     
     </ul>
     </div>    
