--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <h3>Project 1</h3>
     <ul>
 <!--        <li><a href="/assets/project1/style-tiles-project1.pdf" target="_blank">Style Tiles</a></li>-->
-        <li><a href="" target="_blank">Plain HTML</a></li>
+        <li><a href="/project1/plainhtml/" target="_blank">Plain HTML</a></li>
         <li><a href="/project1/" target="_blank">Final Coded Site</a></li>  
     
     </ul>
