--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
         <h3>Project 2</h3>
     <ul>
 <!--        <li><a href="/assets/project1/style-tiles-project1.pdf" target="_blank">Style Tiles</a></li>-->
-        <li><a href="/project2/" target="_blank">Interactive Wireframe</a></li>
+        <li><a href="/project2/wireframe/" target="_blank">Interactive Wireframe</a></li>
+        <li><a href="/project2/" target="_blank">Final Coded Site</a></li>
     
     </ul>
 
