--- a/index.html
+++ b/index.html
@@ -91,6 +91,9 @@
         <li><a href="/responsive-web-design/" target="_blank">Welcome Weekend Responsive Site</a></li>
     
     </ul>
+        
+        <h3>Exercise: Resume</h3>
+        <ul><li><a href="/exercise/" target="_blank">Responsive Resume Site</a></li></ul>
 
     </div>    
 </body>
