--- a/exercise/index.html
+++ b/exercise/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>Resume</title>
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700" rel="stylesheet">
-    <link rel="stylesheet" href="/exercise/assets/styles.css">
+    <link rel="stylesheet" href="exercise/assets/styles.css">
 
     
 </head>
