--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 <body>
     <div class="header"></div>
     <h1>Regina Zambrano</h1>
-    <h5>web design | Spring 2019 w</h5>
+    <h5>web design | Spring 2019</h5>
     
     <div class="project">
     <h3>Project 1</h3>
