--- a/index.html
+++ b/index.html
@@ -94,6 +94,9 @@
         
         <h3>Exercise: Resume</h3>
         <ul><li><a href="/exercise/" target="_blank">Responsive Resume Site</a></li></ul>
+        
+        <h3>Project 3</h3>
+        <ul><li><a href="/project3/wireframe/" target="_blank">Interactive Wireframe </a></li><li><a href="/project3/" target="_blank">Final Coded Site </a></li></ul>
 
     </div>    
 </body>
