--- a/project3/index.html
+++ b/project3/index.html
@@ -295,13 +295,15 @@
             </div>
             <div class="down">
                 <div class="line">
-                    <div class="left"><a href=""></a></div>
-                    <div class="right"></div>
+                    <div class="left"><a href="#start"></a></div>
+                    <div class="right"><a href="#start"></a></div>
                 </div>
             </div>
     </div>
     </div>
+    
     <div class="section">
+        <a name="start"></a>
         <div class="projects">
         <div class="project">
             <div class="picture"><div class="hat"></div><a href="/project3/frutiger.html"><img src="assets/projects/frutiger/frutiger.png"></a></div>
@@ -312,7 +314,7 @@
         </div>
         
         <div class="project">
-            <div class="picture"><div class="outline"></div><a href="/project3/sudoku.html"></a><img src="assets/projects/sudoku/main.png"></div>
+            <div class="picture"><div class="outline"></div><a href="/project3/sudoku.html"><img src="assets/projects/sudoku/main.png"></a></div>
             <div class="text"><a href="/project3/sudoku.html">
                 <div class="title">SUDOKU TABLET GAME</div>
                 <div class="description">HTML/CSS</div>
