--- a/project3/resume.html
+++ b/project3/resume.html
@@ -30,7 +30,7 @@
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
         <a href="/project3/index.html">WORK</a>
         <a href="/project3/resume.html">RESUME</a>
-        <a href="/project3/contact.html">ABOUT ME</a>
+        <a href="/project3/aboutme.html">ABOUT ME</a>
     </div>
     
     <div class="linetop fix"></div>
