--- a/project3/wireframe/frutiger.html
+++ b/project3/wireframe/frutiger.html
@@ -2,8 +2,8 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" type="text/css" href="/assets/styles.css">
-    <link rel="stylesheet" type="text/css" href="/assets/project.css">
+    <link rel="stylesheet" type="text/css" href="/project3/wireframe/assets/styles.css">
+    <link rel="stylesheet" type="text/css" href="/project3/wireframe/assets/project.css">
     <link href="https://fonts.googleapis.com/css?family=Raleway:200,300,400,500,600,700,800" rel="stylesheet">
     <title>Project Page</title>
 </head>
