--- a/project3/wireframe/index.html
+++ b/project3/wireframe/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" type="text/css" href="/assets/styles.css">
+    <link rel="stylesheet" type="text/css" href="/project3/wireframe/assets/styles.css">
     <link href="https://fonts.googleapis.com/css?family=Raleway:200,300,400,500,600,700,800" rel="stylesheet">
     <title>Regina Zambrano's Portfolio</title>
 </head>
