--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <ul><li><a href="/exercise/" target="_blank">Responsive Resume Site</a></li></ul>
         
         <h3>Project 3</h3>
-        <ul><li><a href="/project3/wireframe/" target="_blank">Interactive Wireframe </a></li><li><a href="/project3/" target="_blank">Final Coded Site </a></li></ul>
+        <ul><li><a href="/project3/wireframe/index.html" target="_blank">Interactive Wireframe </a></li><li><a href="/project3/" target="_blank">Final Coded Site </a></li></ul>
 
     </div>    
 </body>
