--- a/project3/index.html
+++ b/project3/index.html
@@ -294,18 +294,18 @@
                 </div>
             </div>
             <div class="down">
+                <a href="#start">
                 <div class="line">
-                    <div class="left"><a href="#start"></a></div>
-                    <div class="right"><a href="#start"></a></div>
+                    <div class="left"></div>
+                    <div class="right"></div>
                 </div>
+                    </a>
             </div>
     </div>
     </div>
     
-    <div class="section">
-        <a name="start"></a>
         <div class="projects">
-        <div class="project">
+        <div class="project" id="start">
             <div class="picture"><div class="hat"></div><a href="/project3/frutiger.html"><img src="assets/projects/frutiger/frutiger.png"></a></div>
             <div class="text"><a href="/project3/frutiger.html">
                 <div class="title">FRUTIGER TYPE SPECIMEN BOOK</div>
@@ -339,7 +339,6 @@
             <div class="media"><a href="https://www.instagram.com/regizambrano/" target="_blank"><img src="assets/socialmedia/instagram.png"></a></div>
         </div>
         </div>
-    </div>
     </div>
 </div>    
 <script>
